k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dice-app
  namespace: dev
  labels:
    app: dice-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: dice-app
